Fix missalignment or resource tags inside production boxes

--- a/src/styles/cards.less
+++ b/src/styles/cards.less
@@ -624,6 +624,10 @@ input[type=radio]:checked + .filterDiv::after {
     display: inline-block;
     vertical-align: middle;
   }
+
+  .resource-tag {
+    margin-bottom: 0 !important;
+  }
 }
 
 .production-box-size1a {
